--- a/public/client/style.css
+++ b/public/client/style.css
@@ -84,7 +84,7 @@ span {
     border-radius: 6px;
 }
 
-.format {
+.format_msg_btn {
     background-color: rgba(61, 249, 0, 0.35);
     color: #000000;
     border-radius: 6px;
