--- a/public/client/style.css
+++ b/public/client/style.css
@@ -43,12 +43,12 @@ span {
 }
 
 .send {
-    background-color: #e2e0e2;
+    background-color: #f1f1f1;
     margin-bottom: 5px;
 }
 
 .in {
-    background-color: #d1dbfc;
+    background-color: #f6f8ff;
     margin-bottom: 5px;
 }
 
